# test_briefing_codex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_WORKFLOW.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml  python_setup_guide.md  건설업 주간 브리핑 PPT 자동 생성 솔루션_기능명세서_2026-04-27.md
examples/: codex_briefing_manifest.example.json
prompts/: construction-issue-classifier.md  fact-check-checklist.md  korean-summarization-rules.md  news-source-whitelist.md
src/: __init__.py  codex_assisted.py  config.py  main.py  orchestrator.py  schemas.py  state.py
src/agents/: __init__.py  article_summarizer.py  fact_checker.py  news_researcher.py  openai_agent_runner.py  pdf_issue_extractor.py
src/collectors/: __init__.py  pdf_collector.py
src/composers/: __init__.py  pptx_builder.py
src/dedup/: __init__.py  cosine_dedup.py
src/exporters/: __init__.py  xlsx_exporter.py
src/extractors/: __init__.py  article_media.py  pdf_text.py
src/llm/: __init__.py  classifier.py  client.py  layout_chooser.py  prompts.py
templates/: design_rules.md
tests/: conftest.py  test_article_summarizer.py  test_codex_assisted.py  test_config.py  test_llm_policy.py  test_orchestrator.py  test_pdf_collector.py  test_pdf_text.py  test_pptx_builder.py  test_state.py  test_xlsx_exporter.py
